--- a/Interfaces/es.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/es.lproj/GeneralPreferencesView.strings
@@ -1,109 +1,108 @@
 
-/* Class = "NSWindow"; title = "Ventana"; ObjectID = "64"; */
-/* "64.title" = "Ventana"; */
+/* Class = "NSMenuItem"; title = "Cada 15 minutos"; ObjectID = "1Ll-uG-QWh"; */
+"1Ll-uG-QWh.title" = "Cada 15 minutos";
 
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "XAi-oh-7Fq.title"; */
-"XAi-oh-7Fq.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Every 2 hours"; ObjectID = "6wU-yO-cnV"; */
-"6wU-yO-cnV.title" = "Cada 2 horas";
-
-/* Class = "NSMenuItem"; title = "Manually"; ObjectID = "H9Q-du-oax"; */
-"H9Q-du-oax.title" = "Manualmente";
-
-/* Class = "NSMenuItem"; title = "Every hour"; ObjectID = "sSj-zI-6RY"; */
-"sSj-zI-6RY.title" = "Cada hora";
-
-/* Class = "NSMenuItem"; title = "Every 6 hours"; ObjectID = "IMa-1h-lIO"; */
-"IMa-1h-lIO.title" = "Cada 6 horas";
-
-/* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
-"5VQ-jP-2rL.title" = "Cada 30 minutos";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "HFO-4f-zYZ"; */
-"HFO-4f-zYZ.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "GAY-ra-eQY"; */
-"GAY-ra-eQY.title" = "Ninguno";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "DFg-c6-rCy"; */
-"DFg-c6-rCy.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "(Do not localise)"; ObjectID = "fYn-Rz-G69"; */
-"fYn-Rz-G69.title" = "(Do not localise)";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "Klv-JA-PvP"; */
-"Klv-JA-PvP.title" = "OtherViews";
+/* Class = "NSButtonCell"; title = "Después del comando \"No leído siguiente\" "; ObjectID = "2oy-1i-QQP"; */
+"2oy-1i-QQP.title" = "Después del comando \"No leído siguiente\" ";
 
 /* Class = "NSMenuItem"; title = "(Path)"; ObjectID = "5Cq-8f-vbL"; */
 "5Cq-8f-vbL.title" = "(Path)";
 
-/* Class = "NSMenuItem"; title = "Other..."; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Otra...";
+/* Class = "NSMenuItem"; title = "Cada 30 minutos"; ObjectID = "5VQ-jP-2rL"; */
+"5VQ-jP-2rL.title" = "Cada 30 minutos";
 
-/* Class = "NSButtonCell"; title = "Show the unread count on the application icon"; ObjectID = "7e3-Hu-RB5"; */
+/* Class = "NSMenuItem"; title = "Cada 2 horas"; ObjectID = "6wU-yO-cnV"; */
+"6wU-yO-cnV.title" = "Cada 2 horas";
+
+/* Class = "NSButtonCell"; title = "Mostrar número de no leídos en el icono de la aplicación"; ObjectID = "7e3-Hu-RB5"; */
 "7e3-Hu-RB5.title" = "Mostrar número de no leídos en el icono de la aplicación";
 
-/* Class = "NSButtonCell"; title = "Bounce the application icon"; ObjectID = "gi4-ao-0yS"; */
-"gi4-ao-0yS.title" = "Animar icono de la aplicación";
-
-/* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "Después del comando \"No leído siguiente\" ";
-
-/* Class = "NSButtonCell"; title = "After a short delay"; ObjectID = "JDV-ek-xja"; */
-"JDV-ek-xja.title" = "Después de un breve instante";
-
-/* Class = "NSMenuItem"; title = "Every 15 minutes"; ObjectID = "1Ll-uG-QWh"; */
-"1Ll-uG-QWh.title" = "Cada 15 minutos";
-
-/* Class = "NSMenuItem"; title = "Every 5 minutes"; ObjectID = "oVW-ee-uJT"; */
-"oVW-ee-uJT.title" = "Cada 5 minutos";
-
-/* Class = "NSMenuItem"; title = "Every 3 hours"; ObjectID = "gnX-dW-XUD"; */
-"gnX-dW-XUD.title" = "Cada 3 horas";
-
-/* Class = "NSTextFieldCell"; title = "Check for new articles:"; ObjectID = "ewU-JH-fMC"; */
-"ewU-JH-fMC.title" = "Buscar nuevos artículos:";
-
-/* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
-"GnT-xT-rAZ.title" = "Buscar nuevas versiones de Vienna al inicio";
-
-/* Class = "NSTextFieldCell"; title = "Default RSS Reader:"; ObjectID = "kGA-Sa-RLG"; */
-"kGA-Sa-RLG.title" = "Lector RSS predeterminado:";
-
-/* Class = "NSButtonCell"; title = "Check for new articles on start up"; ObjectID = "pXX-MI-tJX"; */
-"pXX-MI-tJX.title" = "Buscar nuevos artículos al inicio";
-
-/* Class = "NSButtonCell"; title = "Open new links in the background"; ObjectID = "pjg-Ze-H3l"; */
-"pjg-Ze-H3l.title" = "Abrir nuevos enlaces en segundo plano";
-
-/* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "YoM-Gv-hXn"; */
-"YoM-Gv-hXn.title" = "Abrir enlaces en un navegador externo";
-
-/* Class = "NSTextFieldCell"; title = "Move articles to Trash:"; ObjectID = "k6Y-ib-PGb"; */
-"k6Y-ib-PGb.title" = "Mover artículos a la papelera:";
-
-/* Class = "NSTextFieldCell"; title = "Save downloaded files to:"; ObjectID = "geD-Ws-mQm"; */
-"geD-Ws-mQm.title" = "Guardar archivos descargados en:";
-
-/* Class = "NSTextFieldCell"; title = "When new unread articles are retrieved:"; ObjectID = "BbI-0A-zEG"; */
+/* Class = "NSTextFieldCell"; title = "Cuando se recuperan nuevos artículos no leídos:"; ObjectID = "BbI-0A-zEG"; */
 "BbI-0A-zEG.title" = "Cuando se recuperan nuevos artículos no leídos:";
 
-/* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "sCl-hz-PFF"; */
-"sCl-hz-PFF.title" = "Marcar artículo actual como leído:";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "DFg-c6-rCy"; */
+"DFg-c6-rCy.title" = "OtherViews";
 
-/* Class = "NSButtonCell"; title = "Show in menu bar"; ObjectID = "JN6-lj-bQ1"; */
+/* Class = "NSMenuItem"; title = "Otra..."; ObjectID = "FiK-E7-RnG"; */
+"FiK-E7-RnG.title" = "Otra...";
+
+/* Class = "NSMenuItem"; title = "Ninguno"; ObjectID = "GAY-ra-eQY"; */
+"GAY-ra-eQY.title" = "Ninguno";
+
+/* Class = "NSButtonCell"; title = "Buscar nuevas versiones de Vienna al inicio"; ObjectID = "GnT-xT-rAZ"; */
+"GnT-xT-rAZ.title" = "Buscar nuevas versiones de Vienna al inicio";
+
+/* Class = "NSMenuItem"; title = "Manualmente"; ObjectID = "H9Q-du-oax"; */
+"H9Q-du-oax.title" = "Manualmente";
+
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "HFO-4f-zYZ"; */
+"HFO-4f-zYZ.title" = "OtherViews";
+
+/* Class = "NSMenuItem"; title = "Cada 6 horas"; ObjectID = "IMa-1h-lIO"; */
+"IMa-1h-lIO.title" = "Cada 6 horas";
+
+/* Class = "NSButtonCell"; title = "Después de un breve instante"; ObjectID = "JDV-ek-xja"; */
+"JDV-ek-xja.title" = "Después de un breve instante";
+
+/* Class = "NSButtonCell"; title = "Mostrar en la barra de menús"; ObjectID = "JN6-lj-bQ1"; */
 "JN6-lj-bQ1.title" = "Mostrar en la barra de menús";
+
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "Klv-JA-PvP"; */
+"Klv-JA-PvP.title" = "OtherViews";
 
 /* Class = "NSButtonCell"; title = "Radio"; ObjectID = "NAE-EF-SsE"; */
 "NAE-EF-SsE.title" = "Radio";
 
-/* Class = "NSButtonCell"; title = "Mark updated articles as new"; ObjectID = "meo-78-YOl"; */
+/* Class = "NSButtonCell"; title = "Buscar últimas versiones beta"; ObjectID = "OID-qF-Pp0"; */
+"OID-qF-Pp0.title" = "Buscar últimas versiones beta";
+
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "XAi-oh-7Fq"; */
+"XAi-oh-7Fq.title" = "OtherViews";
+
+/* Class = "NSButtonCell"; title = "Abrir enlaces en un navegador externo"; ObjectID = "YoM-Gv-hXn"; */
+"YoM-Gv-hXn.title" = "Abrir enlaces en un navegador externo";
+
+/* Class = "NSTextFieldCell"; title = "Buscar nuevos artículos:"; ObjectID = "ewU-JH-fMC"; */
+"ewU-JH-fMC.title" = "Buscar nuevos artículos:";
+
+/* Class = "NSMenuItem"; title = "(Do not localise)"; ObjectID = "fYn-Rz-G69"; */
+"fYn-Rz-G69.title" = "(Do not localise)";
+
+/* Class = "NSTextFieldCell"; title = "Guardar archivos descargados en:"; ObjectID = "geD-Ws-mQm"; */
+"geD-Ws-mQm.title" = "Guardar archivos descargados en:";
+
+/* Class = "NSButtonCell"; title = "Animar icono de la aplicación"; ObjectID = "gi4-ao-0yS"; */
+"gi4-ao-0yS.title" = "Animar icono de la aplicación";
+
+/* Class = "NSMenuItem"; title = "Cada 3 horas"; ObjectID = "gnX-dW-XUD"; */
+"gnX-dW-XUD.title" = "Cada 3 horas";
+
+/* Class = "NSTextFieldCell"; title = "Mover artículos a la papelera:"; ObjectID = "k6Y-ib-PGb"; */
+"k6Y-ib-PGb.title" = "Mover artículos a la papelera:";
+
+/* Class = "NSTextFieldCell"; title = "Lector RSS predeterminado:"; ObjectID = "kGA-Sa-RLG"; */
+"kGA-Sa-RLG.title" = "Lector RSS predeterminado:";
+
+/* Class = "NSButtonCell"; title = "Marcar artículos actualizados como nuevos"; ObjectID = "meo-78-YOl"; */
 "meo-78-YOl.title" = "Marcar artículos actualizados como nuevos";
 
-/* Class = "NSButtonCell"; title = "Include anonymous system profile"; ObjectID = "qno-Cg-EkC"; */
-"qno-Cg-EkC.title" = "Incluir perfil anónimo del sistema";
+/* Class = "NSMenuItem"; title = "Cada 5 minutos"; ObjectID = "oVW-ee-uJT"; */
+"oVW-ee-uJT.title" = "Cada 5 minutos";
 
-/* Class = "NSTextFieldCell"; title = "Updates:"; ObjectID = "qeb-at-hYb"; */
+/* Class = "NSButtonCell"; title = "Buscar nuevos artículos al inicio"; ObjectID = "pXX-MI-tJX"; */
+"pXX-MI-tJX.title" = "Buscar nuevos artículos al inicio";
+
+/* Class = "NSButtonCell"; title = "Abrir nuevos enlaces en segundo plano"; ObjectID = "pjg-Ze-H3l"; */
+"pjg-Ze-H3l.title" = "Abrir nuevos enlaces en segundo plano";
+
+/* Class = "NSTextFieldCell"; title = "Actualizaciones:"; ObjectID = "qeb-at-hYb"; */
 "qeb-at-hYb.title" = "Actualizaciones:";
 
+/* Class = "NSButtonCell"; title = "Incluir perfil anónimo del sistema"; ObjectID = "qno-Cg-EkC"; */
+"qno-Cg-EkC.title" = "Incluir perfil anónimo del sistema";
+
+/* Class = "NSTextFieldCell"; title = "Marcar artículo actual como leído:"; ObjectID = "sCl-hz-PFF"; */
+"sCl-hz-PFF.title" = "Marcar artículo actual como leído:";
+
+/* Class = "NSMenuItem"; title = "Cada hora"; ObjectID = "sSj-zI-6RY"; */
+"sSj-zI-6RY.title" = "Cada hora";
