--- a/Interfaces/tr.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/tr.lproj/GeneralPreferencesView.strings
@@ -1,111 +1,108 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "64"; */
-/* "64.title" = "Pencere"; */
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "XAi-oh-7Fq.title"; */
-"XAi-oh-7Fq.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Every 2 hours"; ObjectID = "6wU-yO-cnV"; */
-"6wU-yO-cnV.title" = "2 saatte bir";
-
-/* Class = "NSMenuItem"; title = "Manually"; ObjectID = "H9Q-du-oax"; */
-"H9Q-du-oax.title" = "El ile";
-
-/* Class = "NSMenuItem"; title = "Every hour"; ObjectID = "sSj-zI-6RY"; */
-"sSj-zI-6RY.title" = "Her saat";
-
-/* Class = "NSMenuItem"; title = "Every 6 hours"; ObjectID = "IMa-1h-lIO"; */
-"IMa-1h-lIO.title" = "6 saatte bir";
-
-/* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
-"5VQ-jP-2rL.title" = "30 dakikada bir";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "HFO-4f-zYZ"; */
-"HFO-4f-zYZ.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "GAY-ra-eQY"; */
-"GAY-ra-eQY.title" = "Hiçbir şey";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "DFg-c6-rCy"; */
-"DFg-c6-rCy.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "(Do not localise)"; ObjectID = "fYn-Rz-G69"; */
-"fYn-Rz-G69.title" = "(Yerelleştirme)";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "Klv-JA-PvP"; */
-"Klv-JA-PvP.title" = "DiğerGörünümler";
-
-/* Class = "NSMenuItem"; title = "(Path)"; ObjectID = "5Cq-8f-vbL"; */
-"5Cq-8f-vbL.title" = "(Yol)";
-
-/* Class = "NSMenuItem"; title = "Other..."; ObjectID = "FiK-E7-RnG"; */
-"FiK-E7-RnG.title" = "Diğer...";
-
-/* Class = "NSButtonCell"; title = "Show the unread count on the application icon"; ObjectID = "7e3-Hu-RB5"; */
-"7e3-Hu-RB5.title" = "Okunmamış makale sayısını uygulama ikonunda göster";
-
-/* Class = "NSButtonCell"; title = "Bounce the application icon"; ObjectID = "gi4-ao-0yS"; */
-"gi4-ao-0yS.title" = "Uygulama simgesini zıplat";
-
-/* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
-"2oy-1i-QQP.title" = "\"Next Unread\" komutundan sonra";
-
-/* Class = "NSButtonCell"; title = "After a short delay"; ObjectID = "JDV-ek-xja"; */
-"JDV-ek-xja.title" = "Kısa bir aradan sonra";
-
-/* Class = "NSMenuItem"; title = "Every 15 minutes"; ObjectID = "1Ll-uG-QWh"; */
+/* Class = "NSMenuItem"; title = "15 dakikada bir"; ObjectID = "1Ll-uG-QWh"; */
 "1Ll-uG-QWh.title" = "15 dakikada bir";
 
-/* Class = "NSMenuItem"; title = "Every 5 minutes"; ObjectID = "oVW-ee-uJT"; */
-"oVW-ee-uJT.title" = "5 dakikada bir";
+/* Class = "NSButtonCell"; title = "\"Next Unread\" komutundan sonra"; ObjectID = "2oy-1i-QQP"; */
+"2oy-1i-QQP.title" = "\"Next Unread\" komutundan sonra";
 
-/* Class = "NSMenuItem"; title = "Every 3 hours"; ObjectID = "gnX-dW-XUD"; */
-"gnX-dW-XUD.title" = "3 saatte bir";
+/* Class = "NSMenuItem"; title = "(Yol)"; ObjectID = "5Cq-8f-vbL"; */
+"5Cq-8f-vbL.title" = "(Yol)";
 
-/* Class = "NSTextFieldCell"; title = "Check for new articles:"; ObjectID = "ewU-JH-fMC"; */
-"ewU-JH-fMC.title" = "Yeni makaleleri kontrol et:";
+/* Class = "NSMenuItem"; title = "30 dakikada bir"; ObjectID = "5VQ-jP-2rL"; */
+"5VQ-jP-2rL.title" = "30 dakikada bir";
 
-/* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
-"GnT-xT-rAZ.title" = "Başlangıçta Vienna'nın yeni sürümünü kontrol et";
+/* Class = "NSMenuItem"; title = "2 saatte bir"; ObjectID = "6wU-yO-cnV"; */
+"6wU-yO-cnV.title" = "2 saatte bir";
 
-/* Class = "NSTextFieldCell"; title = "Default RSS Reader:"; ObjectID = "kGA-Sa-RLG"; */
-"kGA-Sa-RLG.title" = "Varsayılan RSS Tarayıcısı:";
+/* Class = "NSButtonCell"; title = "Okunmamış makale sayısını uygulama ikonunda göster"; ObjectID = "7e3-Hu-RB5"; */
+"7e3-Hu-RB5.title" = "Okunmamış makale sayısını uygulama ikonunda göster";
 
-/* Class = "NSButtonCell"; title = "Check for new articles on start up"; ObjectID = "pXX-MI-tJX"; */
-"pXX-MI-tJX.title" = "Başlangıçta yeni makaleleri kontrol et";
-
-/* Class = "NSButtonCell"; title = "Open new links in the background"; ObjectID = "pjg-Ze-H3l"; */
-"pjg-Ze-H3l.title" = "Yeni bağlantıları arkaplanda aç";
-
-/* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "YoM-Gv-hXn"; */
-"YoM-Gv-hXn.title" = "Bağlantıları harici tarayıcıda aç";
-
-/* Class = "NSTextFieldCell"; title = "Move articles to Trash:"; ObjectID = "k6Y-ib-PGb"; */
-"k6Y-ib-PGb.title" = "Seçili makaleleri çöp kutusuna taşı:";
-
-/* Class = "NSTextFieldCell"; title = "Save downloaded files to:"; ObjectID = "geD-Ws-mQm"; */
-"geD-Ws-mQm.title" = "İndirilen dosyaları şuraya kaydet:";
-
-/* Class = "NSTextFieldCell"; title = "When new unread articles are retrieved:\n"; ObjectID = "BbI-0A-zEG"; */
+/* Class = "NSTextFieldCell"; title = "Yeni okunmamış makale alındığında:\n"; ObjectID = "BbI-0A-zEG"; */
 "BbI-0A-zEG.title" = "Yeni okunmamış makale alındığında:\n";
 
-/* Class = "NSTextFieldCell"; title = "Mark current article read:\n"; ObjectID = "sCl-hz-PFF"; */
-"sCl-hz-PFF.title" = "Seçili makaleyi okundu olarak işaretle:\n";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "DFg-c6-rCy"; */
+"DFg-c6-rCy.title" = "DiğerGörünümler";
 
-/* Class = "NSButtonCell"; title = "Show in menu bar"; ObjectID = "JN6-lj-bQ1"; */
+/* Class = "NSMenuItem"; title = "Diğer..."; ObjectID = "FiK-E7-RnG"; */
+"FiK-E7-RnG.title" = "Diğer...";
+
+/* Class = "NSMenuItem"; title = "Hiçbir şey"; ObjectID = "GAY-ra-eQY"; */
+"GAY-ra-eQY.title" = "Hiçbir şey";
+
+/* Class = "NSButtonCell"; title = "Başlangıçta Vienna'nın yeni sürümünü kontrol et"; ObjectID = "GnT-xT-rAZ"; */
+"GnT-xT-rAZ.title" = "Başlangıçta Vienna'nın yeni sürümünü kontrol et";
+
+/* Class = "NSMenuItem"; title = "El ile"; ObjectID = "H9Q-du-oax"; */
+"H9Q-du-oax.title" = "El ile";
+
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "HFO-4f-zYZ"; */
+"HFO-4f-zYZ.title" = "DiğerGörünümler";
+
+/* Class = "NSMenuItem"; title = "6 saatte bir"; ObjectID = "IMa-1h-lIO"; */
+"IMa-1h-lIO.title" = "6 saatte bir";
+
+/* Class = "NSButtonCell"; title = "Kısa bir aradan sonra"; ObjectID = "JDV-ek-xja"; */
+"JDV-ek-xja.title" = "Kısa bir aradan sonra";
+
+/* Class = "NSButtonCell"; title = "Menü barında göster"; ObjectID = "JN6-lj-bQ1"; */
 "JN6-lj-bQ1.title" = "Menü barında göster";
+
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "Klv-JA-PvP"; */
+"Klv-JA-PvP.title" = "DiğerGörünümler";
 
 /* Class = "NSButtonCell"; title = "Radio"; ObjectID = "NAE-EF-SsE"; */
 "NAE-EF-SsE.title" = "Radio";
 
+/* Class = "NSButtonCell"; title = "Search for latest Beta versions"; ObjectID = "OID-qF-Pp0"; */
+"OID-qF-Pp0.title" = "Search for latest Beta versions";
+
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "XAi-oh-7Fq"; */
+"XAi-oh-7Fq.title" = "DiğerGörünümler";
+
+/* Class = "NSButtonCell"; title = "Bağlantıları harici tarayıcıda aç"; ObjectID = "YoM-Gv-hXn"; */
+"YoM-Gv-hXn.title" = "Bağlantıları harici tarayıcıda aç";
+
+/* Class = "NSTextFieldCell"; title = "Yeni makaleleri kontrol et:"; ObjectID = "ewU-JH-fMC"; */
+"ewU-JH-fMC.title" = "Yeni makaleleri kontrol et:";
+
+/* Class = "NSMenuItem"; title = "(Yerelleştirme)"; ObjectID = "fYn-Rz-G69"; */
+"fYn-Rz-G69.title" = "(Yerelleştirme)";
+
+/* Class = "NSTextFieldCell"; title = "İndirilen dosyaları şuraya kaydet:"; ObjectID = "geD-Ws-mQm"; */
+"geD-Ws-mQm.title" = "İndirilen dosyaları şuraya kaydet:";
+
+/* Class = "NSButtonCell"; title = "Uygulama simgesini zıplat"; ObjectID = "gi4-ao-0yS"; */
+"gi4-ao-0yS.title" = "Uygulama simgesini zıplat";
+
+/* Class = "NSMenuItem"; title = "3 saatte bir"; ObjectID = "gnX-dW-XUD"; */
+"gnX-dW-XUD.title" = "3 saatte bir";
+
+/* Class = "NSTextFieldCell"; title = "Seçili makaleleri çöp kutusuna taşı:"; ObjectID = "k6Y-ib-PGb"; */
+"k6Y-ib-PGb.title" = "Seçili makaleleri çöp kutusuna taşı:";
+
+/* Class = "NSTextFieldCell"; title = "Varsayılan RSS Tarayıcısı:"; ObjectID = "kGA-Sa-RLG"; */
+"kGA-Sa-RLG.title" = "Varsayılan RSS Tarayıcısı:";
+
 /* Class = "NSButtonCell"; title = "Mark updated articles as new"; ObjectID = "meo-78-YOl"; */
 "meo-78-YOl.title" = "Mark updated articles as new";
 
-/* Class = "NSButtonCell"; title = "Include anonymous system profile"; ObjectID = "qno-Cg-EkC"; */
-"qno-Cg-EkC.title" = "Include anonymous system profile";
+/* Class = "NSMenuItem"; title = "5 dakikada bir"; ObjectID = "oVW-ee-uJT"; */
+"oVW-ee-uJT.title" = "5 dakikada bir";
+
+/* Class = "NSButtonCell"; title = "Başlangıçta yeni makaleleri kontrol et"; ObjectID = "pXX-MI-tJX"; */
+"pXX-MI-tJX.title" = "Başlangıçta yeni makaleleri kontrol et";
+
+/* Class = "NSButtonCell"; title = "Yeni bağlantıları arkaplanda aç"; ObjectID = "pjg-Ze-H3l"; */
+"pjg-Ze-H3l.title" = "Yeni bağlantıları arkaplanda aç";
 
 /* Class = "NSTextFieldCell"; title = "Updates:"; ObjectID = "qeb-at-hYb"; */
 "qeb-at-hYb.title" = "Updates:";
 
-/* Class = "NSButtonCell"; title = "Search for latest Beta versions"; ObjectID = "OID-qF-Pp0"; */
-"OID-qF-Pp0.title" = "Search for latest Beta versions";
+/* Class = "NSButtonCell"; title = "Include anonymous system profile"; ObjectID = "qno-Cg-EkC"; */
+"qno-Cg-EkC.title" = "Include anonymous system profile";
+
+/* Class = "NSTextFieldCell"; title = "Seçili makaleyi okundu olarak işaretle:\n"; ObjectID = "sCl-hz-PFF"; */
+"sCl-hz-PFF.title" = "Seçili makaleyi okundu olarak işaretle:\n";
+
+/* Class = "NSMenuItem"; title = "Her saat"; ObjectID = "sSj-zI-6RY"; */
+"sSj-zI-6RY.title" = "Her saat";
