--- a/Interfaces/gl.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/gl.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
 
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Non amosar este aviso de novo";
+/* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
+"5.title" = "Tirar o lixo";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Non baleirar a papeleira";
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
+"17.title" = "Tirar o lixo";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Tirar o lixo";
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
+"18.title" = "Non baleirar a papeleira";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Hai artigos eliminados na papeleira.\nQueres baleirala antes de saír??";
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
+"19.title" = "Hai artigos eliminados na papeleira. Queres baleirala antes de saír??";
+
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
+"20.title" = "Non amosar este aviso de novo";
