--- a/Interfaces/gl.lproj/FeedCredentials.strings
+++ b/Interfaces/gl.lproj/FeedCredentials.strings
@@ -1,20 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "O acceso a %@ precisa que proporciones os datos credenciais credenciales de inicio de sesión";
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "32"; */
+"32.title" = "Cancelar";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Cancelar";
+/* Class = "NSTextFieldCell"; title = "Name:"; ObjectID = "33"; */
+"33.title" = "Nome:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Iniciar sesión";
+/* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
+"34.title" = "O acceso a %@ precisa que proporciones os datos credenciais credenciales de inicio de sesión";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Nome:";
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
+"37.title" = "Contrasinal:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Contrasinal:";
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
+"38.title" = "Iniciar sesión";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "O nome de usuario e o contrasinal serán lembrados para a próxima vez que actualices esta subscrición.";
+/* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
+"39.title" = "O nome de usuario e o contrasinal serán lembrados para a próxima vez que actualices esta subscrición.";
