--- a/Interfaces/gl.lproj/GroupFolder.strings
+++ b/Interfaces/gl.lproj/GroupFolder.strings
@@ -1,15 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Cancelar";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Introduza o nome do cartafol do grupo:\n";
+/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
+"5.title" = "Panel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Novo cartafol de grupo";
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
+"32.title" = "Novo cartafol de grupo";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
+"34.title" = "Gardar";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Gardar";
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
+"35.title" = "Cancelar";
+
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
+"36.title" = "Introduza o nome do cartafol do grupo:";
