--- a/Interfaces/gl.lproj/InfoWindow.strings
+++ b/Interfaces/gl.lproj/InfoWindow.strings
@@ -2,18 +2,6 @@
 /* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
 "5.title" = "Fiestra";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Caixa";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Caixa";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Caixa";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Caixa";
-
 /* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
 "104.title" = "(Nome do cartafol)";
 
@@ -32,8 +20,8 @@
 /* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
 "111.title" = "Nome de usuario:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
-"112.title" = "Contrasinal:\n";
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "112"; */
+"112.title" = "Contrasinal:";
 
 /* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
 "115.title" = "Actualizar autenticación";
@@ -44,14 +32,8 @@
 /* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
 "117.title" = "Tamaño:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
-"118.title" = "Non lidos:\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
-"119.title" = "\n";
-
-/* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
-"120.title" = "\n";
+/* Class = "NSTextFieldCell"; title = "Unread:"; ObjectID = "118"; */
+"118.title" = "Non lidos:";
 
 /* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
 "121.title" = "Subscrito";
